<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imagenInicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="250dp"
            android:src="@drawable/coinkinicio" />

        <include
            layout="@layout/toolbar"
            android:id="@+id/datosToolbar"
            />

        <TextView
            android:id="@+id/Verificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-230dp"
            android:layout_marginTop="140dp"
            android:layout_toEndOf="@+id/imagenInicio"
            android:text="@string/preguntaDatos"
            android:textColor="@color/teal_700"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/datosNecesarios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-230dp"
            android:layout_marginTop="180dp"
            android:layout_toEndOf="@+id/imagenInicio"
            android:text="@string/pedirDatos"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/spinnerTipoDocumento"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp" />

        <EditText
            android:id="@+id/documento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="360dp"
            android:drawableTint="@color/white"
            android:hint="@string/numero"
            android:inputType="number" />

        <EditText
            android:id="@+id/fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="420dp"
            android:ems="10"
            android:hint="@string/fecha"
            android:inputType="date" />

        <EditText
            android:id="@+id/fechaExpe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="480dp"
            android:ems="10"
            android:hint="@string/fechaExpe"
            android:inputType="date" />

        <Spinner
            android:id="@+id/spinnerGenero"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="540dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnContinuar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="650dp"
            android:background="@drawable/btn_continuar"
            android:text="@string/continuar"
            android:textColor="@color/black" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_marginTop="270dp"
            android:background="@color/verde"/>

    </RelativeLayout>
</layout>