<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            tools:context=".VerificarDatos">

            <ImageView
                android:id="@+id/imagenInicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:layout_marginEnd="250dp"
                android:src="@drawable/coinkinicio" />

            <include
                android:id="@+id/includeTolbar"
                layout="@layout/toolbar" />

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="250dp"
                android:background="@color/verde" />


            <TextView
                android:id="@+id/Verificar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-240dp"
                android:layout_marginTop="120dp"
                android:layout_toEndOf="@+id/imagenInicio"
                android:text="@string/verificar"
                android:textColor="@color/teal_700"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/datosNecesarios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-240dp"
                android:layout_marginTop="150dp"
                android:layout_toEndOf="@+id/imagenInicio"
                android:text="@string/texto"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/primerNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="300dp"
                android:hint="@string/primerNombre"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:drawableTint="@color/white" />

            <TextView
                android:id="@+id/traerNombre1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="340dp"
                android:textColor="@color/teal_700"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/segundoNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="380dp"
                android:hint="@string/segundoNombre"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/traerNombre2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="420dp"
                android:textColor="@color/teal_700"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/primerApellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="460dp"
                android:hint="@string/primerApellido"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/traerApellido1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="500dp"
                android:textColor="@color/teal_700"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/segundoApellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="540dp"
                android:hint="@string/segundoApellido"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/traerApellido2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="580dp"
                android:textColor="@color/teal_700"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/genero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="620dp"
                android:hint="@string/generoVerifi"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/traerGenero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="660dp"
                android:textColor="@color/teal_700"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/navigatorBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="720dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_cancelar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_cancelar"
                    android:text="@string/cancelar"
                    android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_continuar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_continuar"
                    android:text="@string/continuar"
                    android:textSize="15sp" />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</layout>